crates/swc_ecma_parser/tests/typescript-errors/esDecorators/classDeclaration/esDecorators-classDeclaration-exportModifier/file6.ts
// @filename: file6.js

// error
@dec export @dec class C6 {}

